--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,32 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            //打开混淆
+            minifyEnabled true
+            //zipAlign优化(Google Play强制要求app经过zipAlign优化,zipAlign让安装包中的资源按4字节对齐,这样可以减少应用在运行时的内存消耗)
+            zipAlignEnabled true
+            //打开资源压缩,移除无用的资源文件
+            shrinkResources true
+            //签名配置
+//            signingConfig signingConfigs.release
+            //前一部分代表系统默认的android程序的混淆文件，该文件已经包含了基本的混淆声明，后一个文件是自己的定义混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    signingConfigs {
+        release {
+            storeFile file("appkey.jks")
+            storePassword "android"
+            keyAlias "android"
+            keyPassword "android"
+            v2SigningEnabled true
         }
     }
 
