--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--SDcard增删文件权限-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <!--申请访问DownloadManager的权限-->
-    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
 
     <!--联系人-->
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
@@ -32,6 +30,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -71,7 +70,7 @@
         <!--四大组件-->
         <!--ContentResolver-->
         <activity
-            android:name=".ui.ipc.ContentResolverActivity"
+            android:name=".ui.ipc.ContentProviderActivity"
             android:label="ContentProvider操作数据"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait" />
