--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <!--banner-同时显示三个item-->
         <activity
-            android:name=".ui.banner.Item3Activity"
+            android:name=".ui.banner.BannerActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|screenSize|orientation"
             android:screenOrientation="portrait">
