--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.liusong.app">
 
     <!--访问test moudle中contentProvider权限-->
-    <uses-permission android:name="com.ls.test.provider"/>
-    <uses-permission android:name="com.ls.test.provider.READ_PROVIDER"/>
-    <uses-permission android:name="com.ls.test.provider.WRITE_PROVIDER"/>
+    <uses-permission android:name="com.ls.test.provider" />
+    <uses-permission android:name="com.ls.test.provider.READ_PROVIDER" />
+    <uses-permission android:name="com.ls.test.provider.WRITE_PROVIDER" />
 
     <!--联网-->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <!--联系人-->
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <!-- 拨号权限 -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -33,20 +33,20 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
 
         <!--banner-同时显示三个item-->
         <activity
             android:name=".ui.banner.BannerActivity"
-            android:label="@string/app_name"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,8 +56,8 @@
 
         <activity
             android:name=".ui.animation.BlastActivity"
-            android:label="@string/app_name"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,8 +67,8 @@
 
         <activity
             android:name=".ui.thirdparty.JPushActivity"
-            android:label="@string/app_name"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -78,44 +78,57 @@
 
         <activity
             android:name=".ui.update.DmActivity"
-            android:label="一般的Apk更新方法"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="一般的Apk更新方法"
             android:screenOrientation="portrait" />
         <!--软键盘-->
         <activity
             android:name=".ui.keyboard.ShowHideActivity"
-            android:label="Activity中监听软键盘显隐"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="Activity中监听软键盘显隐"
             android:screenOrientation="portrait" />
 
         <!--IPC-->
         <activity
             android:name=".ui.ipc.IntentActivity"
-            android:label="IPC"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="IPC"
             android:screenOrientation="portrait" />
 
         <!--SQLite-->
         <activity
             android:name=".ui.db.SQLiteActivity"
-            android:label="SQLite"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="SQLite"
             android:screenOrientation="portrait" />
 
         <!--四大组件-->
         <!--ContentResolver-->
         <activity
             android:name=".ui.ipc.ContentProviderActivity"
-            android:label="ContentProvider操作数据"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="ContentProvider操作数据"
             android:screenOrientation="portrait" />
 
         <!--网络-->
         <activity
             android:name=".ui.net.NetActivity"
-            android:label="Net"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="Net"
             android:screenOrientation="portrait" />
+
+        <!--service区域-->
+
+        <service
+            android:name=".service.LiveService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":gray" />
+        <service
+            android:name=".service.LiveService$GrayInnerService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":gray" />
 
     </application>
 
